# binagg

./: .gitignore  PACKAGE_PLAN.md  PUBLISHING.md  README.md  pyproject.toml  tutorial.ipynb  validate_against_paper.py
BinAgg/: Confidence Intervals.ipynb  Datasets preprocessing.ipynb  VER 11 Synthetic data.ipynb  intrusion detection.csv
__MACOSX/BinAgg/: ._AirQualityUCI.csv  ._Confidence Intervals.ipynb  ._Datasets preprocessing.ipynb  ._VER 11 Synthetic data.ipynb  ._auction.csv  ._energydata_complete.csv  ._intrusion detection.csv  ._winequality-red.csv  ._winequality-white.csv
examples/: basic_regression.py  privacy_accounting.py  synthetic_data.py  tutorial.ipynb
src/binagg/: __init__.py  binning.py  privacy.py  regression.py  synthetic.py  utils.py
tests/: __init__.py  conftest.py  test_binning.py  test_integration.py  test_privacy.py  test_regression.py  test_synthetic.py
