[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binagg"
version = "0.1.0"
description = "Differentially Private Linear Regression and Synthetic Data Generation with Statistical Guarantees"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shurong Lin", email = "shurong@psu.edu"},
    {name = "Aleksandra Slavkovic"},
]
maintainers = [
    {name = "Shurong Lin", email = "shurong@psu.edu"},
]
keywords = [
    "differential-privacy",
    "linear-regression",
    "synthetic-data",
    "privacy",
    "statistics",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "scikit-learn>=1.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/soumojitdas/binagg"
Documentation = "https://github.com/soumojitdas/binagg#readme"
Repository = "https://github.com/soumojitdas/binagg"
Issues = "https://github.com/soumojitdas/binagg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
